fix overflow on list with many elements

--- a/src/css/board.css
+++ b/src/css/board.css
@@ -14,12 +14,11 @@
 
 .lists > .list {
 	margin: 1rem;
-	/* padding: 1rem; */
 	width: 15rem;
 	min-width: 15rem;
-	/* border: 1px solid #ccc; */
-	/* border-radius: 0.5rem; */
-	/* height: 90vh; */
+	height: 95vh;
+	overflow-y: auto;
+	overflow-x: hidden;
 }
 
 .list-title {
